@@ -1,3 +1,15 @@
+2005-07-10  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	group_list is now useable to create groups for classes
+	it is not possible yet to assign students to groups.
+
+	* src/boards/python/admin/class_edit.py:
+	* src/boards/python/admin/module.py:
+	* src/boards/python/admin/module_groups.py:
+	* src/boards/python/admin/module_profiles.py:
+	* src/boards/python/administration.py:
+	* src/gcompris/gcompris_db.c:
+
 2005-07-09  Yves Combe  <yves@ycombe.net>
 
 	profile C functions now complete.
